2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/defaults.py.in:
	* src/lib/gtkui/gtkui.py: Fix spelling of GNOME, and get
	translation credits from translation instead of hardcoding it.
	This is consistent with GNOME practices and the other gnome-games.

2007-04-29  Robert Ancell  <robert.ancell@gmail.com>

	* Set more configuration defaults in case schema is missing (Bug #434097)
        * Use configured data dir for autosaves, not ~/.glchess
        * Execute AIs in ~/.gnome2/glchess/logs to avoid making files in ~ (Bug #424010)
        * Fix visible resizing when starting up
        * Save window maximised state (Bug #404554)
	* Only save window size on quit

2007-04-25  Robert Ancell  <robert.ancell@gmail.com>

	* Update dummy OpenGL scene to have correct method arguments (Bug #420730)

2007-04-22  Robert Ancell  <robert.ancell@gmail.com>

	* Changed AI process management to remove os.forkpty() (not on Solaris) (Bug #426538)
	* If an AI dies the game completes and the UI displays "opponent has died". This is
	  an actual tag in the PGN spec I was looking for a reason to use!!
	* Catch exception if unable to display help (Bug #432216)
        * Don't consider a missing autoload file an error
	* Catch IOError exceptions when autosaving (Bug #425614)

2007-04-09  Robert Ancell  <robert.ancell@gmail.com>

	* Merged changes from sf.net version 1.0.5:
	  - Added timed play.
	  - Changed nice level for AIs to 19 (they are affecting the animation)
	  - Add choice of board rotation modes (white side, black side, human
	    side, current players side)
	  - Fixed broken OpenGL board rotation
	  - Added 2D rotation

2007-03-20  Andreas Røsdal  <andreasr@gnome.org>

	* glchess.desktop.in: Remove extra space at end of tooltip.
	Patch from Bruce Cowan in bug #410784. 

2007-03-18  Robert Ancell  <robert.ancell@gmail.com>
	* Handle empty filename in save dialog (Gnome bug #419486)