@@ -86,6 +86,30 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/glchess/show_numbering</key>
+      <applyto>/apps/glchess/show_numbering</applyto>
+      <owner>glchess</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>A flag to enable board numbering</short>
+        <long>A flag to enable board numbering</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/glchess/show_comments</key>
+      <applyto>/apps/glchess/show_comments</applyto>
+      <owner>glchess</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>A flag to show move comments</short>
+        <long>A flag to show move comments</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/glchess/show_history</key>
       <applyto>/apps/glchess/show_history</applyto>
       <owner>glchess</owner>
