@@ -4,7 +4,6 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="glchess_app">
-  <property name="visible">False</property>
   <property name="title">glChess</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -63,7 +62,7 @@
 		      <accelerator key="J" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image48">
+			<widget class="GtkImage" id="image56">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-connect</property>
 			  <property name="icon_size">1</property>
@@ -114,7 +113,7 @@
 		      <accelerator key="W" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image49">
+			<widget class="GtkImage" id="image57">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-close</property>
 			  <property name="icon_size">1</property>
@@ -164,7 +163,7 @@
 		      <accelerator key="F11" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image50">
+			<widget class="GtkImage" id="image58">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-fullscreen</property>
 			  <property name="icon_size">1</property>
@@ -185,7 +184,7 @@
 		      <accelerator key="F11" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image51">
+			<widget class="GtkImage" id="image59">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-leave-fullscreen</property>
 			  <property name="icon_size">1</property>
@@ -230,11 +229,29 @@
 
 		  <child>
 		    <widget class="GtkCheckMenuItem" id="menu_view_move_hints">
-		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Move _Hints</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">True</property>
+		      <property name="active">False</property>
 		      <signal name="activate" handler="_on_toggle_move_hints_clicked" last_modification_time="Fri, 23 Feb 2007 14:02:01 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkCheckMenuItem" id="menu_view_comment">
+		      <property name="label" translatable="yes">Move _Comments</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">False</property>
+		      <signal name="activate" handler="_on_menu_view_comment_clicked" last_modification_time="Sat, 12 May 2007 09:24:10 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkCheckMenuItem" id="menu_view_numbering">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Board _Numbering</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">False</property>
+		      <signal name="activate" handler="_on_menu_view_numbering_clicked" last_modification_time="Wed, 16 May 2007 12:34:49 GMT"/>
 		    </widget>
 		  </child>
 
@@ -285,7 +302,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Current Player</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">menu_side_white</property>
 			      <signal name="activate" handler="_on_board_view_changed" last_modification_time="Sun, 18 Mar 2007 02:42:01 GMT"/>
 			    </widget>
@@ -331,7 +348,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Standard Algebraic</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">menu_movef_human</property>
 			      <signal name="activate" handler="_on_menu_movef_san_activate" last_modification_time="Sat, 10 Feb 2007 03:06:49 GMT"/>
 			    </widget>
@@ -416,7 +433,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Bishop</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">promotion_queen_radio</property>
 			      <signal name="activate" handler="_on_promotion_type_changed" last_modification_time="Tue, 13 Feb 2007 13:28:13 GMT"/>
 			    </widget>
@@ -446,7 +463,7 @@
 		      <signal name="activate" handler="_on_help_clicked" last_modification_time="Fri, 11 Aug 2006 12:43:28 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image52">
+			<widget class="GtkImage" id="image60">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -483,6 +500,7 @@
 	<widget class="GtkToolbar" id="toolbar">
 	  <property name="visible">True</property>
 	  <property name="orientation">GTK_ORIENTATION_HORIZONTAL</property>
+	  <property name="toolbar_style">GTK_TOOLBAR_BOTH</property>
 	  <property name="tooltips">True</property>
 	  <property name="show_arrow">True</property>
 
