@@ -74,6 +74,8 @@ _defaults = {'show_toolbar':                     True,
              'move_format':                      'human',
              'promotion_type':                   'queen',
              'board_view':                       'human',
+             'show_comments':                    False,
+             'show_numbering':                   False,
              'load_directory':                   '',
              'save_directory':                   '',
              'new_game_dialog/move_time':        0,
