@@ -1,3 +1,8 @@
+2007-05-16  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/cairo/__init__.py: Speed up 2D rotating
+        * Add board numbering for 2D mode (Bug #392286)
+
 2007-05-15  Andreas Røsdal  <andreasr@gnome.org>
 
 	* src/lib/defaults.py.in:
